feat: Add home section translations to all language files

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -134,6 +134,38 @@
       "creatingFamily": "جاري إنشاء عائلتك..."
     }
   },
+  "home": {
+    "title": "Flow Fam",
+    "tagline": "السلام والنظرة العامة والحب",
+    "greeting": "مرحباً، {{name}}! 👋",
+    "coins": "لديك {{count}} عملات 🪙",
+    "welcomeMessage": "مرحباً بعودتك! أتمنى لك يوماً رائعاً ونجاحاً في مهامك ومواعيدك 🧡",
+    "whoAreYou": "من أنت؟",
+    "welcomeToFlowFam": "مرحباً بك في Flow Fam!",
+    "parent": "👨‍👩‍👧‍👦 والد/والدة",
+    "child": "👶 طفل",
+    "tasksToday": "✅ المهام اليوم",
+    "agendaToday": "📅 الأجندة اليوم",
+    "noTasksToday": "لا توجد مهام لليوم!",
+    "noAppointmentsToday": "لا توجد مواعيد اليوم!",
+    "appointmentCount": "لديك {{count}} موعد{{plural}} اليوم",
+    "goToAgenda": "الذهاب إلى الأجندة",
+    "yourTasks": "🎯 مهامك",
+    "noTasksEnjoy": "لا توجد مهام! استمتع بيومك!",
+    "executeToday": "تنفيذ اليوم",
+    "menu": {
+      "agenda": "الأجندة",
+      "tasks": "المهام",
+      "shopping": "التسوق",
+      "finances": "المالية",
+      "photobook": "ألبوم الصور",
+      "meals": "الوجبات",
+      "notes": "الملاحظات",
+      "documents": "المستندات",
+      "shop": "المتجر",
+      "profile": "الملف الشخصي"
+    }
+  },
   "language": {
     "title": "اللغة",
     "subtitle": "اختر لغتك",
