--- a/locales/hi.json
+++ b/locales/hi.json
@@ -134,6 +134,38 @@
       "creatingFamily": "आपका परिवार बनाया जा रहा है..."
     }
   },
+  "home": {
+    "title": "Flow Fam",
+    "tagline": "शांति, अवलोकन और प्यार",
+    "greeting": "नमस्ते, {{name}}! 👋",
+    "coins": "आपके पास {{count}} सिक्के हैं 🪙",
+    "welcomeMessage": "वापस स्वागत है! मैं आपको एक शानदार दिन और आपके कार्यों और नियुक्तियों में सफलता की कामना करता हूं 🧡",
+    "whoAreYou": "आप कौन हैं?",
+    "welcomeToFlowFam": "Flow Fam में आपका स्वागत है!",
+    "parent": "👨‍👩‍👧‍👦 माता-पिता",
+    "child": "👶 बच्चा",
+    "tasksToday": "✅ आज के कार्य",
+    "agendaToday": "📅 आज का एजेंडा",
+    "noTasksToday": "आज के लिए कोई कार्य नहीं!",
+    "noAppointmentsToday": "आज कोई नियुक्ति नहीं!",
+    "appointmentCount": "आज आपकी {{count}} नियुक्ति{{plural}} है",
+    "goToAgenda": "एजेंडा पर जाएं",
+    "yourTasks": "🎯 आपके कार्य",
+    "noTasksEnjoy": "कोई कार्य नहीं! अपने दिन का आनंद लें!",
+    "executeToday": "आज निष्पादित करें",
+    "menu": {
+      "agenda": "एजेंडा",
+      "tasks": "कार्य",
+      "shopping": "खरीदारी",
+      "finances": "वित्त",
+      "photobook": "फोटो एल्बम",
+      "meals": "भोजन",
+      "notes": "नोट्स",
+      "documents": "दस्तावेज़",
+      "shop": "दुकान",
+      "profile": "प्रोफ़ाइल"
+    }
+  },
   "language": {
     "title": "भाषा",
     "subtitle": "अपनी भाषा चुनें",
