fix: Resolve add child button, translations, and header color

--- a/locales/nl.json
+++ b/locales/nl.json
@@ -256,6 +256,7 @@
   },
   "tasks": {
     "title": "Taken",
+    "subtitle": "Overzicht van je taken",
     "today": "📅 Vandaag",
     "recurring": "🔄 Herhalingstaken",
     "upcoming": "📆 Komende taken",
@@ -266,9 +267,13 @@
     "weekly": "Wekelijks",
     "monthly": "Maandelijks",
     "noTasksToday": "Geen taken voor vandaag",
+    "noTasksParent": "Je hebt nog geen taken",
+    "noTasksChild": "Je hebt nog geen taken",
     "noRecurringTasks": "Geen herhalingstaken",
     "noUpcomingTasks": "Geen komende taken",
     "addTask": "Taak toevoegen",
+    "addFirstTask": "Voeg je eerste taak toe",
+    "waitForTasks": "Wacht tot je ouders taken voor je toevoegen",
     "chooseTaskType": "Type taak kiezen",
     "oneTimeTask": "Eenmalige taak",
     "oneTimeTaskDesc": "Voor taken met een specifieke datum",
@@ -278,9 +283,15 @@
     "taskName": "Taaknaam *",
     "taskNamePlaceholder": "Taaknaam",
     "assignTo": "Toewijzen aan: *",
+    "assignedTo": "Toegewezen aan",
     "date": "Datum:",
     "time": "Tijd (optioneel):",
     "timePlaceholder": "bijv. 09:00",
+    "repeat": "Herhaling",
+    "repeatNone": "Geen",
+    "repeatDaily": "Dagelijks",
+    "repeatWeekly": "Wekelijks",
+    "repeatMonthly": "Maandelijks",
     "taskAdded": "Taak toegevoegd",
     "taskUpdated": "Taak bijgewerkt",
     "taskDeleted": "Taak verwijderd",
